# project_management_app

./: Cargo.toml  README.md
cedar-policies/projects/: policies.cedar
sql-migrations/: 03__create_project_tables.sql
sqlite-migrations/: 03__create_project_tables.sql  04__create_admin_user.sql
src/: main.rs  repository.rs  tests.rs.txt
src/services/: articles.rs  mod.rs  projects.rs
src/services/permission/: authorizer.rs  mod.rs  token.rs
tests/: integration_test.rs
