[package]
name = "project_management_app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.77"
actix = "0.13.5"
actix-http = "3.8.0"
actix-web = "4"
#actix-web = { version = "4", features = ["rustls"] }
rustls = "0.20"
chrono = { version = "0.4.38", features = [ "serde" ] }
dotenv = "0.15.0"
serde = { version = "1.0.204", features = [ "derive" ] }
serde_json = "1.0.120"
sqlx = { version = "0.7.4", features = [ "runtime-async-std-native-tls", "any", "sqlite", "postgres", "chrono" ] }
either = "1.8.1" 
env_logger = "0.10.0"

# DEPENDENCIES SPECIFIC TO AUTH
actix-web-httpauth = "0.8.2"
argonautica = "0.2.0"
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.8"
tokyo = "1.0.0"


# DEPENDENCIES FOR PERMISSIONS
cedar-policy = { version = "3.1", features = [ "partial-eval" ] }
derive_more = { version = "1.0.0-beta", features = ["display", "error", "from"] }
cedar-policy-validator = "3.2.1"
